--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="material-symbols-outlined hamburger">menu</span>
                     <button>
                         <a href="https://www.buymeacoffee.com/sahalashfaq">
-                            <img src="coffee.png" alt="" srcset="">
+                            <img src="https://i.ibb.co/DPLW0VPG/coffee.png" alt="" srcset="">
                         </a>
                     </button>
                 </div>
@@ -270,7 +270,7 @@
                     </button>
                 <button>
                     <a href="https://www.buymeacoffee.com/sahalashfaq">
-                        <img src="coffee.png" alt="" srcset="">
+                        <img src="https://i.ibb.co/DPLW0VPG/coffee.png" alt="" srcset="">
                     </a>
                 </button>
             </div>
